# ml_platzi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  packages.r  pyproject.toml  requirements.txt
Advanced/Calculo-Basico/: 1_Programando_funciones.ipynb  Descenso del Gradidente.ipynb
Advanced/Deep-Learning-Pytorch/Notebooks/: cycle-gan.ipynb  cycle_gan.ipynb  neural_network_pytorch.ipynb  tensors.ipynb
Advanced/Fundamentos-AL-Python/: Untitled.ipynb
Advanced/ML-Applied-Python/: Data_Processing.ipynb  Modeling_and_evaluating.ipynb
Advanced/ML-Applied-Python/data/: x.csv
Advanced/Machine-Learning-Fundamentals/: Decision Tree.ipynb  K-Means.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb  tensorflow.ipynb
Advanced/Regresion-Lineal/: LinearRegressionAlgorythm.ipynb  Untitled.ipynb
Basic/Estadistica-Computacional/: Datos Experimentales.ipynb  Muestreo e intervalos de confianza.ipynb  Programación Estocástica.ipynb  Programación dinámica.ipynb  Simulaciones de Montecarlo.ipynb
Basic/Estadistica-Computacional/caminata_borracho/: Caminos aleatorios.ipynb  borracho.py  campo.py  coordenada.py
Basic/Estadistica-Inferencial/notebooks/: Sampling functions.ipynb  sampling variance and standard deviation.ipynb
Basic/Fundamentos-Bases-de-datos/: Formas normales de Bases de Datos.ipynb  RDBMS.ipynb
Basic/Git-Github/: README.md
Basic/Git-Github/project_1/: biografia.txt  blog.html
Basic/Mathematics/Linear Algebra/: 01_vectores.ipynb  02_suma_vectores.ipynb  03_producto_escalar.ipynb  04_producto_interno.ipynb  05_funciones_lineales.ipynb  06_aproximaciones_taylor.ipynb  07_regresion_lineal.ipynb  08_distancia_vectores.ipynb  09_desviacion_angulo.ipynb  10_clustering.ipynb  Examen.ipynb
Basic/Mathematics/Probabilidades/: Distribuciones.ipynb  Fundamentos de probabilidad.ipynb  Inferencia bayesiana.ipynb  MLE.ipynb
Basic/POO-Python/: Algoritmos de búsqueda y ordenación.ipynb  Graficado Simple.ipynb  Introducción a la optimización.ipynb  Programacion Orientada a Objetos y Algoritmos I.ipynb
Basic/Pensamiento-Probabilistico/: 1 - Programación Probabilístico.ipynb  3 - Introducción a Machine Learning.ipynb  4 - Introducción a la clasificación.ipynb
Basic/SQL-MySQL/: alter_query.sql  business_questions.sql  create_queries.sql  database_schema.sql  insert_all_data.sql  select_join.sql  super_queries.sql  upgrade_delete.sql
Basic/SQL-Practico/: platzi.alumnos.sql  platzi.carreras.sql  platzi.dump
Basic/SQL-Practico/Challenges/: challenge_1.sql  challenge_10.sql  challenge_11.sql  challenge_12.sql  challenge_13.sql  challenge_2.sql  challenge_3.sql  challenge_4.sql  challenge_5.sql  challenge_6.sql  challenge_7.sql  challenge_8.sql  challenge_9.sql
deep-learning/chatbots-with-langchain/Notebooks/: 1-open_source_langchain.ipynb  1-open_source_models_with_langchain.ipynb  run_gpu.py
deep-learning/chatbots-with-langchain/notebooks/: 1-hello_world_langchain.ipynb  2-models_prompts_&_chains.ipynb  3-langchain_chains.ipynb  4-documents_and_embeddings.ipynb  5-chat_and_memory.ipynb  test.rs
deep-learning/chatbots-with-openai/: 1-tweets_classifier.ipynb  2-load_model_openai.ipynb  3-chat_completions.ipynb  4.guess_the_animal.ipynb  5-fine_tuning_model.ipynb  bot.py  file.jsonl  openai_fns.py  telegram_fns.py
deep-learning/embeddings-and-vectorial-dbs/: word2vec.model  words.tsv
deep-learning/embeddings-and-vectorial-dbs/Notebooks/: 1-embeddings_intro.ipynb  (+6 more)
deep-learning/image-generation/: 1-stable_diffusion.ipynb  2-depth_to_image.ipynb  3-image_resizin.ipynb
machine-learning/clustering-with-python-and-sklearn/: 1.first-clustering-with-sklearn.ipynb
machine-learning/transfer_learning_huggingface/: 1-introduction_hub_huggingface.ipynb
wheels/: tensorflow_io-0.33.0-cp311-cp311-macosx_13_0_arm64.whl  tensorflow_io_gcs_filesystem-0.33.0-cp311-cp311-macosx_13_0_arm64.whl
(+30 files in other folders)
