[tool.poetry]
name = "Platzi-ML"
version = "1.6.0"
description = "Project with all the notebooks for all the courses in the ML career"
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = "2.12.0"
tensorflow-metal = "^1.0.1"
flake8 = "^6.1.0"
black = {extras = ["jupyter"], version = "^23.12.1"}
matplotlib = "^3.7.2"
pandas = "^2.0.3"
polars = "^0.18.15"
seaborn = "^0.12.2"
transformers = "^4.31.0"
evaluate = "^0.4.0"
accelerate = "^0.21.0"
jupyterlab = "^4.0.5"
pylance = "^0.6.2"
ipykernel = "^6.25.1"
opencv-python = "^4.8.0.76"
tensorflow-io-gcs-filesystem = {path = "wheels/tensorflow_io_gcs_filesystem-0.33.0-cp311-cp311-macosx_13_0_arm64.whl"}
tensorflow-io = {path = "wheels/tensorflow_io-0.33.0-cp311-cp311-macosx_13_0_arm64.whl"}
albumentations = "^1.3.1"
tf-slim = "^1.1.0"
update = "^0.0.1"
timm = "^0.9.7"
ipywidgets = "^8.1.0"
pycocotools = "^2.0.7"
icecream = "^2.1.3"
pydot = "^1.4.2"
graphviz = "^0.20.1"
diffusers = "^0.21.4"
scipy = "^1.11.3"
safetensors = "^0.4.0"
gradio = "^4.5.0"
streamlit = "^1.28.2"
openai = "^1.3.7"
sentence-transformers = "^2.2.2"
gensim = "^4.3.2"
datasets = "^2.15.0"
tiktoken = "^0.5.2"
pinecone-client = "^2.2.4"
chromadb = "^0.4.20"
langchain = "^0.0.352"
pypdf = "^3.17.4"
einops = "^0.7.0"
unstructured = "0.7.12"
jsonlines = "^4.0.0"
mypy = "^1.8.0"
instructorembedding = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
