[tool.poetry]
name = "Platzi-ML"
version = "1.2.1"
description = "Project with all the notebooks for all the courses in the ML career"
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.16.1"
tensorflow-metal = "^1.1.0"
flake8 = "^7.0.0"
black = "^24.4.1"
mypy = "^1.10.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
polars = "^0.20.22"
seaborn = "^0.13.2"
transformers = "^4.40.1"
datasets = "^2.19.0"
evaluate = "^0.4.1"
accelerate = "^0.29.3"
optuna = "^3.6.1"
jupyterlab = "^4.1.6"
pylance = "^0.10.15"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
scikit-learn = "^1.4.2"
hvplot = "^0.9.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
